@@ -190,7 +190,7 @@ write_default_include_file(IncludeFile) :-
 	set_bip_name(write_default_include_file, 1),
 	'$prolog_file_name'(IncludeFile, PlFile),
 	'$open'(PlFile, write, S, []),
-	format(S, '%% generated by write_default_include_file/1~n',[]),
+	format(S, '% generated by write_default_include_file/1~n',[]),
 	format(S, ':- compiler_mode(embed).~n', []),
 	(   setof(Op, (current_op(Prior,Prec,Op), Op \== (',')), LOp),
 	    '$write_include_goal'(S, op(Prior, Prec, LOp)),
@@ -479,7 +479,7 @@ listing(PI) :-
 
 '$listing_all'(PI) :-  % setof: for each File returns a sorted list [Line-PI,...]
 	setof(Line-PI, '$listing_one_pi'(File, Line, PI), LKPI), 
-	format('~n%% file: ~w~n', [File]),
+	format('~n% file: ~w~n', [File]),
 	member(_-PI1, LKPI),
 	'$listing_one'(PI1),
 	fail.
