@@ -469,7 +469,7 @@ predicate(write_default_include_file/1,189,static,private,monofile,built_in,[
     put_nil(3),
     call('$open'/4),
     put_value(y(1),0),
-    put_atom('%% generated by write_default_include_file/1~n',1),
+    put_atom('% generated by write_default_include_file/1~n',1),
     put_nil(2),
     call(format/3),
     put_value(y(1),0),
@@ -1321,7 +1321,7 @@ predicate('$listing_all'/1,480,static,private,monofile,built_in,[
     unify_local_value(x(2)),
     put_variable(y(1),2),
     call(setof/3),
-    put_atom('~n%% file: ~w~n',0),
+    put_atom('~n% file: ~w~n',0),
     put_list(1),
     unify_value(y(0)),
     unify_nil,
