@@ -2512,7 +2512,7 @@ predicate('$debug_write_goal'/4,866,static,private,monofile,built_in,[
     put_variable(y(6),1),
     call('$debug_port_pretty'/2),
     put_atom(debugger_output,0),
-    put_atom('~N ~a %4d %4d  ~a',1),
+    put_atom('~N ~a ~%4d ~%4d  ~a',1),
     put_list(2),
     unify_local_value(y(5)),
     unify_list,
