@@ -729,70 +729,70 @@ label(1),
     put_atom('   Statistics (in ms)     user     real~n',0),
     put_nil(1),
     call(format/2),
-    put_atom('   source reading     : %6d   %6d~n',0),
+    put_atom('   source reading     : ~%6d   ~%6d~n',0),
     put_list(1),
     unify_local_value(y(0)),
     unify_list,
     unify_local_value(y(1)),
     unify_nil,
     call(format/2),
-    put_atom('   syntactic sugar    : %6d   %6d~n',0),
+    put_atom('   syntactic sugar    : ~%6d   ~%6d~n',0),
     put_list(1),
     unify_local_value(y(2)),
     unify_list,
     unify_local_value(y(3)),
     unify_nil,
     call(format/2),
-    put_atom('   internal format    : %6d   %6d~n',0),
+    put_atom('   internal format    : ~%6d   ~%6d~n',0),
     put_list(1),
     unify_local_value(y(4)),
     unify_list,
     unify_local_value(y(5)),
     unify_nil,
     call(format/2),
-    put_atom('   code generation    : %6d   %6d~n',0),
+    put_atom('   code generation    : ~%6d   ~%6d~n',0),
     put_list(1),
     unify_local_value(y(6)),
     unify_list,
     unify_local_value(y(7)),
     unify_nil,
     call(format/2),
-    put_atom('   register allocation: %6d   %6d~n',0),
+    put_atom('   register allocation: ~%6d   ~%6d~n',0),
     put_list(1),
     unify_local_value(y(8)),
     unify_list,
     unify_local_value(y(9)),
     unify_nil,
     call(format/2),
-    put_atom('   indexing           : %6d   %6d~n',0),
+    put_atom('   indexing           : ~%6d   ~%6d~n',0),
     put_list(1),
     unify_local_value(y(10)),
     unify_list,
     unify_local_value(y(11)),
     unify_nil,
     call(format/2),
-    put_atom('   first arg computing: %6d   %6d~n',0),
+    put_atom('   first arg computing: ~%6d   ~%6d~n',0),
     put_list(1),
     unify_local_value(y(12)),
     unify_list,
     unify_local_value(y(13)),
     unify_nil,
     call(format/2),
-    put_atom('   code emission      : %6d   %6d~n',0),
+    put_atom('   code emission      : ~%6d   ~%6d~n',0),
     put_list(1),
     unify_local_value(y(14)),
     unify_list,
     unify_local_value(y(15)),
     unify_nil,
     call(format/2),
-    put_atom('   other              : %6d   %6d~n',0),
+    put_atom('   other              : ~%6d   ~%6d~n',0),
     put_list(1),
     unify_local_value(y(20)),
     unify_list,
     unify_local_value(y(21)),
     unify_nil,
     call(format/2),
-    put_atom('                Total : %6d   %6d~n',0),
+    put_atom('                Total : ~%6d   ~%6d~n',0),
     put_list(1),
     unify_local_value(y(18)),
     unify_list,
